<resources>
    <string name="app_name">ShiftTemple</string>
    <string name="create_button">Создать</string>
    <string name="next_button">Далее</string>
    <string name="CardText1">Text1</string>
    <string name="CardText2">Text2</string>
    <string name="CreateTaskText">Создать задачу</string>
    <string name="ShortDeskPlaceText">Краткое описание</string>
    <string name="FullDeskPlaceText">Полное описание</string>
    <string name="agePlaceText">Возраст</string>
    <string name="cityPlaceText">Город</string>
    <string name="contactsPlaceText">+79000000000</string>
    <string name="emailPlaceText">ivan@ivanov.ru</string>
    <string name="firstnamePlaceText">Имя</string>
    <string name="lastnamePlaceText">Фамилия</string>
    <string name="usernamePlaceText">Логин</string>
    <string name="CreateNewUserText">Регистрация</string>
    <string name="updateDateTimeText">DateTime</string>
    <string name="not_selected_user_error">Выберите пользователя</string>
</resources>